# OCR-barcode-label

./: .travis.yml  BarcodeLabel.cpp  CMakeLists.txt  README.md  template.json
include/: DynamsoftLabelRecognition.h
